--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URL = mongodb+srv://pratik_db_user:pratik_db_user@testing.umckrwv.mongodb.net/test
 PORT = 7000
+# USERNAME=pratik_db_user
+# PASSWORD=pratik_db_user
+# DATABASENAME=TEST
