--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "routing",
   "main": "index.js",
   "scripts": {
-    "dev":"node --watch index.js",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
