--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGO_URL=mongodb+srv://pratik_db_user:MyPassword@testing.umckrwv.mongodb.net/test?retryWrites=true&w=majority
-
+MONGO_URL = mongodb+srv://pratik_db_user:pratik_db_user@testing.umckrwv.mongodb.net/test
 PORT = 7000
 # USERNAME=pratik_db_user
 # PASSWORD=pratik_db_user
