--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=7000
-MONGO_URL=mongodb+srv://pratik_db_user:pratik_db_user@testing.umckrwv.mongodb.net/test?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://pratik_db_user:pratik_db_user@testing.umckrwv.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://pratik_db_user:pratik_db_user@testing.umckrwv.mongodb.net/test
 
 
 USERNAME=pratik_db_user
