--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MONGO_URL=mongodb+srv://pratik_db_user:pratik_db_user@testing.umckrwv.mongodb.ne
 
 
 USERNAME=pratik_db_user
-PASSWORD=pratik_db_password
+PASSWORD=pratik_db_user
 DATABASENAME=TEST
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
